feat: Encode categorical variables

--- a/FluShot.ipynb
+++ b/FluShot.ipynb
@@ -762,124 +762,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2212</th>\n",
+       "      <th>20217</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Own</td>\n",
-       "      <td>Employed</td>\n",
-       "      <td>atmpeygn</td>\n",
-       "      <td>MSA, Not Principle  City</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>xicduogh</td>\n",
-       "      <td>rcertsgn</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2349</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Own</td>\n",
-       "      <td>Not in Labor Force</td>\n",
-       "      <td>fpwskwrf</td>\n",
-       "      <td>MSA, Not Principle  City</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25757</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>Rent</td>\n",
-       "      <td>Employed</td>\n",
-       "      <td>fpwskwrf</td>\n",
-       "      <td>MSA, Not Principle  City</td>\n",
+       "      <td>Not in Labor Force</td>\n",
+       "      <td>atmpeygn</td>\n",
+       "      <td>Non-MSA</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>fcxhlnwr</td>\n",
-       "      <td>haliazsg</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22009</th>\n",
+       "      <th>26161</th>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>kbazzjca</td>\n",
-       "      <td>Non-MSA</td>\n",
+       "      <td>fpwskwrf</td>\n",
+       "      <td>MSA, Principle City</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11822</th>\n",
-       "      <td>3.0</td>\n",
+       "      <th>14455</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Own</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>oxchjgsf</td>\n",
+       "      <td>MSA, Principle City</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>fcxhlnwr</td>\n",
+       "      <td>hfxkjkmi</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12475</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>Own</td>\n",
-       "      <td>Not in Labor Force</td>\n",
-       "      <td>oxchjgsf</td>\n",
-       "      <td>Non-MSA</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>fpwskwrf</td>\n",
+       "      <td>MSA, Not Principle  City</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fcxhlnwr</td>\n",
+       "      <td>haliazsg</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20437</th>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Own</td>\n",
+       "      <td>Not in Labor Force</td>\n",
+       "      <td>qufhixun</td>\n",
+       "      <td>Non-MSA</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -889,59 +889,59 @@
       "text/plain": [
        "              h1n1_concern h1n1_knowledge behavioral_antiviral_meds  \\\n",
        "respondent_id                                                         \n",
-       "2212                   1.0            1.0                       0.0   \n",
-       "2349                   NaN            1.0                       0.0   \n",
-       "25757                  3.0            2.0                       0.0   \n",
-       "22009                  1.0            1.0                       0.0   \n",
-       "11822                  3.0            1.0                       0.0   \n",
+       "20217                  1.0            1.0                       0.0   \n",
+       "26161                  2.0            1.0                       0.0   \n",
+       "14455                  2.0            2.0                       0.0   \n",
+       "12475                  2.0            2.0                       0.0   \n",
+       "20437                  1.0            1.0                       0.0   \n",
        "\n",
        "              behavioral_avoidance behavioral_face_mask behavioral_wash_hands  \\\n",
        "respondent_id                                                                   \n",
-       "2212                           1.0                  0.0                   0.0   \n",
-       "2349                           1.0                  0.0                   1.0   \n",
-       "25757                          1.0                  0.0                   1.0   \n",
-       "22009                          1.0                  0.0                   1.0   \n",
-       "11822                          1.0                  1.0                   1.0   \n",
+       "20217                          0.0                  0.0                   0.0   \n",
+       "26161                          1.0                  0.0                   1.0   \n",
+       "14455                          1.0                  0.0                   1.0   \n",
+       "12475                          1.0                  0.0                   1.0   \n",
+       "20437                          0.0                  0.0                   1.0   \n",
        "\n",
        "              behavioral_large_gatherings behavioral_outside_home  \\\n",
        "respondent_id                                                       \n",
-       "2212                                  0.0                     1.0   \n",
-       "2349                                  0.0                     1.0   \n",
-       "25757                                 1.0                     1.0   \n",
-       "22009                                 1.0                     1.0   \n",
-       "11822                                 1.0                     1.0   \n",
+       "20217                                 0.0                     0.0   \n",
+       "26161                                 0.0                     1.0   \n",
+       "14455                                 1.0                     0.0   \n",
+       "12475                                 0.0                     0.0   \n",
+       "20437                                 0.0                     0.0   \n",
        "\n",
        "              behavioral_touch_face doctor_recc_h1n1  ... rent_or_own  \\\n",
        "respondent_id                                         ...               \n",
-       "2212                            1.0              0.0  ...         Own   \n",
-       "2349                            1.0              1.0  ...         Own   \n",
-       "25757                           1.0              0.0  ...        Rent   \n",
-       "22009                           1.0              0.0  ...         NaN   \n",
-       "11822                           1.0              0.0  ...         Own   \n",
+       "20217                           0.0              0.0  ...        Rent   \n",
+       "26161                           1.0              0.0  ...         NaN   \n",
+       "14455                           1.0              1.0  ...         Own   \n",
+       "12475                           1.0              0.0  ...         Own   \n",
+       "20437                           0.0              0.0  ...         Own   \n",
        "\n",
        "                employment_status hhs_geo_region                census_msa  \\\n",
        "respondent_id                                                                \n",
-       "2212                     Employed       atmpeygn  MSA, Not Principle  City   \n",
-       "2349           Not in Labor Force       fpwskwrf  MSA, Not Principle  City   \n",
-       "25757                    Employed       fpwskwrf  MSA, Not Principle  City   \n",
-       "22009                         NaN       kbazzjca                   Non-MSA   \n",
-       "11822          Not in Labor Force       oxchjgsf                   Non-MSA   \n",
+       "20217          Not in Labor Force       atmpeygn                   Non-MSA   \n",
+       "26161                         NaN       fpwskwrf       MSA, Principle City   \n",
+       "14455                    Employed       oxchjgsf       MSA, Principle City   \n",
+       "12475                    Employed       fpwskwrf  MSA, Not Principle  City   \n",
+       "20437          Not in Labor Force       qufhixun                   Non-MSA   \n",
        "\n",
        "              household_adults household_children employment_industry  \\\n",
        "respondent_id                                                           \n",
-       "2212                       1.0                3.0            xicduogh   \n",
-       "2349                       3.0                NaN                 NaN   \n",
-       "25757                      1.0                NaN            fcxhlnwr   \n",
-       "22009                      1.0                2.0                 NaN   \n",
-       "11822                      1.0                NaN                 NaN   \n",
+       "20217                      1.0                NaN                 NaN   \n",
+       "26161                      3.0                1.0                 NaN   \n",
+       "14455                      2.0                3.0            fcxhlnwr   \n",
+       "12475                      NaN                NaN            fcxhlnwr   \n",
+       "20437                      NaN                NaN                 NaN   \n",
        "\n",
        "              employment_occupation h1n1_vaccine seasonal_vaccine  \n",
        "respondent_id                                                      \n",
-       "2212                       rcertsgn        False            False  \n",
-       "2349                            NaN         True             True  \n",
-       "25757                      haliazsg        False            False  \n",
-       "22009                           NaN        False            False  \n",
-       "11822                           NaN        False            False  \n",
+       "20217                           NaN        False            False  \n",
+       "26161                           NaN        False            False  \n",
+       "14455                      hfxkjkmi         True             True  \n",
+       "12475                      haliazsg         True             True  \n",
+       "20437                           NaN        False             True  \n",
        "\n",
        "[5 rows x 37 columns]"
       ]
@@ -2025,8 +2025,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "a0a99710",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ColumnTransformer(transformers=[('onehotencoder', OneHotEncoder(),\n",
+       "                                 ['behavioral_antiviral_meds',\n",
+       "                                  'behavioral_avoidance',\n",
+       "                                  'behavioral_face_mask',\n",
+       "                                  'behavioral_wash_hands',\n",
+       "                                  'behavioral_large_gatherings',\n",
+       "                                  'behavioral_outside_home',\n",
+       "                                  'behavioral_touch_face', 'doctor_recc_h1n1',\n",
+       "                                  'doctor_recc_seasonal',\n",
+       "                                  'chronic_med_condition',\n",
+       "                                  'child_under_6_months', 'health_worker',\n",
+       "                                  '...\n",
+       "                                  'census_msa', 'employment_industry',\n",
+       "                                  'employment_occupation']),\n",
+       "                                ('ordinalencoder', OrdinalEncoder(),\n",
+       "                                 ['h1n1_concern', 'h1n1_knowledge',\n",
+       "                                  'opinion_h1n1_vacc_effective',\n",
+       "                                  'opinion_h1n1_risk',\n",
+       "                                  'opinion_h1n1_sick_from_vacc',\n",
+       "                                  'opinion_seas_vacc_effective',\n",
+       "                                  'opinion_seas_risk',\n",
+       "                                  'opinion_seas_sick_from_vacc', 'age_group',\n",
+       "                                  'education', 'income_poverty',\n",
+       "                                  'household_adults', 'household_children'])])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Encode categorical variables\n",
+    "# Use one-hot encoding for nominals and ordinal encoding for the rest\n",
+    "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "\n",
+    "col_transformer = make_column_transformer(\n",
+    "    (OneHotEncoder(), nominals),\n",
+    "    (OrdinalEncoder(), ordinals))\n",
+    "\n",
+    "col_transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bebd9210",
+   "id": "38859f18",
    "metadata": {},
    "outputs": [],
    "source": []
