doc: Add comments re: feature selection

--- a/FluShot.ipynb
+++ b/FluShot.ipynb
@@ -2957,9 +2957,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d19d7ed",
+   "metadata": {},
+   "source": [
+    "_Comment on feature selection:_\n",
+    "\n",
+    "Some of the  models like, like the decision tree and k-Nearest Neighbors benefit from selecting a smaller subset of features.  On the other hand, there is no significant improvement for the gradient-boosted decision tree."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81fd5a61",
+   "id": "e4b185c2",
    "metadata": {},
    "outputs": [],
    "source": []
